--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,85 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Dario Ghersi
+    - name: Citizenship
+      value: American, Italian
     - name: Languages
-      value: English, German
+      value: English, Italian
 
-- title: Education
+
+- title: Education and Training
   type: time_table
+
   contents:
+    - title: Postdoctoral Fellow
+      institution: Princeton University
+      year: 2010 - 2014
+      description: Structural bioinformatics and network-based approaches to study cancer mutations
+
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: New York University, New York, NY
+      year: 2005 - 2010
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Computational approaches for predicting and characterizing protein binding sites
+
+    - title: Research Fellow
+      institution: Hospital for Joint Diseases, New York, NY
+      year: 2004-2005
       description:
-        - Description 1.
-        - Description 2.
+        - Studying heterologous immunity in antiviral CD8+ responses  with agent-based models
+
+    - title: MD
+      institution: University of Genoa, Genoa, Italy
+      year: 1998-2004
+      description:
+         - Mathematical models of the immune system
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
+
+    - title: Associate Professor of Biomedical Informatics
+      institution: College of Information Science and Technology, University of Nebraska at Omaha
+      year: 2020-now
+
     - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+      institution: Department of Surgery, University of Texas Southwestern
+      year: 2022
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    - title: Assistant Professor of Biomedical Informatics
+      institution: College of Information Science and Technology, University of Nebraska at Omaha
+      year: 2014-2020
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Service
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Associate Editor for <a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a>
+      year: 2020-now
+
+    - title: Associate Editor for <a href="https://home.liebertpub.com/publications/journal-of-computational-biology/31">Journal of Computational Biology</a>
+      year: 2021-now
+
+    - title: Co-director of the <a href="https://catalog.unmc.edu/graduate-studies/programs-requirements/phd/igpbs/bisb/">Bioinformatics and Systems Biology Program at UNMC</a>
+      year: 2020-now
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+    - year: 2017
+      items: First-year Faculty Award for Extramural Funding (UNO)
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
+    - year: 2004
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - Medal for Academic Achievements (University of Genoa)
 
 - title: Other Interests
-  type: list
+  type: nested_list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - title: Too many to list them all!
+      items:
+        - Collecting and playing guitars and other string instruments
+        - Rving around the U.S.
+        - Watching baseball games and studying <a href="https://sabr.org/sabermetrics">baseball analytics</a>
+        - Learning new languages
