--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,7 @@ jobs:
       with:
         folder: _site
 
+- name: Fix permission
+  run: |
+  chmod a+x bin/*
+  git commit -am "add permission"
