added GCC and UPC

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -65,6 +65,12 @@
     - title: Co-director of the <a href="https://catalog.unmc.edu/graduate-studies/programs-requirements/phd/igpbs/bisb/">Bioinformatics and Systems Biology Program at UNMC</a>
       year: 2020-now
 
+    - title: Graduate Curriculum Chair, MS in Biomedical Informatics
+      year: 2018-now
+
+    - title: Undergraduate Program Chair, BS in Bioinformatics
+      year: 2015-2018
+
 - title: Honors and Awards
   type: time_table
   contents:
